--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body {
       font-family: 'Georgia', serif;
       color: #fff;
-      background: url('images/wallpaper.png') no-repeat center center fixed;
+      background: url('wallpaper.png') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -122,7 +122,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="images/logo.png" alt="Logo" class="logo">
+      <img src="logo.png" alt="Logo" class="logo">
     </div>
     <nav>
       <a href="index.html">About</a>
@@ -142,7 +142,7 @@
       </p>
     </div>
     <div class="hero-img">
-      <img src="images/profile pic.png" alt="Therrence Alvarez">
+      <img src="profile pic.png" alt="Therrence Alvarez">
     </div>
   </main>
 
