--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     body {
       font-family: 'Georgia', serif;
       color: white;
-      background: url('images/wallpaper.png') no-repeat center center fixed;
+      background: url('wallpaper.png') no-repeat center center fixed;
       background-size: cover;
       margin: 0;
       padding: 0;
@@ -124,7 +124,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="images/logo.png" alt="Logo" class="logo">
+      <img src="logo.png" alt="Logo" class="logo">
     </div>
     <nav>
       <a href="index.html">About</a>
@@ -139,7 +139,7 @@
 
   <section class="portfolio-content">
     <div class="portfolio-item1">
-      <img src="images/pic1.png" alt="Laptop and Hand">
+      <img src="pic1.png" alt="Laptop and Hand">
     </div>
     <div class="portfolio-info">
       <ul>
@@ -149,7 +149,7 @@
       </ul>
     </div>
     <div class="portfolio-item2">
-      <img src="images/pic2.png" alt="Shell Artwork">
+      <img src="pic2.png" alt="Shell Artwork">
     </div>
   </section>
 
