--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Georgia', serif;
-      background: url('images/wallpaper.png') no-repeat center center fixed;
+      background: url('wallpaper.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -107,7 +107,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="images/logo.png" alt="Logo" class="logo">
+      <img src="logo.png" alt="Logo" class="logo">
     </div>
     <nav>
       <a href="index.html">About</a>
